# SIT

./: .gitignore  pyproject.toml
sit/: db.sqlite3  package-lock.json  package.json  tailwind.config.js
sit/accountancy/: apps.py
sit/billing/: forms.py  models.py  urls.py  views.py
sit/billing/migrations/: 0001_initial.py
sit/billing/templates/: _base.html
sit/billing/templates/billing/: registrar_cliente.html  registrar_insumos.html  registrar_productos.html
sit/core/: forms.py  models.py  urls.py  views.py
sit/core/migrations/: 0001_initial.py  0002_alter_cliente_id.py  0003_insumo_producto.py
sit/core/templates/: _base.html
sit/core/templates/core/: crear_cliente.html  crear_insumo.html  crear_producto.html  editar_cliente.html  editar_insumo.html  editar_producto.html  listar_clientes.html  listar_insumos.html  listar_productos.html
sit/home/: views.py
sit/home/templates/: _base.html
sit/home/templates/home/: home.html
sit/sit/: asgi.py  settings.py  urls.py  wsgi.py
sit/static/CACHE/css/: output.0aeb7476ab00.css  output.2ad18e08bb42.css  output.2d699240f866.css  output.49f66deb1f49.css  output.554ee1ad34c9.css  output.6dd1e988d3e6.css  output.6f011f10fa35.css  output.72c06acfcca4.css  output.85d1d105b7d7.css  output.8b8800d06219.css  output.8f5f8e49b2a1.css  output.98c38cdc5242.css  output.99dbbc67a915.css  output.9d39afd376d8.css  output.a92e4e5c7d3d.css  output.a9a5cea30172.css  output.b25cc62d8110.css  output.b2cca10230b3.css  output.b4b04e012460.css  output.b769786ee232.css  output.dc9f4cb3b913.css  (+5 more)
sit/static/src/: output.css
